--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/common/img/elmag.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce</title>
 
@@ -12,75 +12,13 @@
     <!-- font family -->
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap" rel="stylesheet">
 
-    <!-- line fontawesome icons  -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/lib/all.min.css">
-    <!-- fontawesome icons  -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/lib/line-awesome.css">
-    <!-- ionicons icons  -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/lib/ionicons.css">
-    <!-- animate css  -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/lib/animate.css">
-    <!-- fancybox popup  -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/lib/jquery.fancybox.css">
-    <!-- lity popup  -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/lib/lity.css">
-    <!-- swiper slider  -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/lib/swiper8.min.css">
-    <!-- izi toast  -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/lib/iziToast.min.css">
-    <!-- common style -->
-    
-    <!-- home style -->
-    <!-- <link rel="stylesheet" href="assets/css/home_1_style.css"> -->
-    <link rel="stylesheet" href="/src/assets/common/assets/css/home_1_style.css">
     <link rel="stylesheet" href="/src/assets/common/assets/css/common_style.css">
-    <!-- <link rel="stylesheet" href="/src/assets/common/assets/css/inner_pages.css"> -->
   </head>
   <body class="home-style1">
-
-    <div class="loader-wrap">
-        <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
-            <path id="svg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
-        </svg>
-
-        <div class="loader-wrap-heading">
-            <div class="load-text">
-                <span>L</span>
-                <span>o</span>
-                <span>a</span>
-                <span>d</span>
-                <span>i</span>
-                <span>n</span>
-                <span>g</span>
-            </div>
-        </div>
-    </div>
     <div id="root">
 
     </div>
 
     <script type="module" src="/src/main.jsx"></script>
-
-    <script src="/src/assets/common/assets/js/lib/jquery-3.0.0.min.js"></script>
-    <script src="/src/assets/common/assets/js/lib/jquery-migrate-3.0.0.min.js"></script>
-    <script src="/src/assets/common/assets/js/lib/bootstrap.bundle.min.js"></script>
-    <script src="/src/assets/common/assets/js/lib/wow.min.js"></script>
-    <script src="/src/assets/common/assets/js/lib/jquery.fancybox.js"></script>
-    <script src="/src/assets/common/assets/js/lib/lity.js"></script>
-    <script src="/src/assets/common/assets/js/lib/swiper8-bundle.min.js"></script>
-    <script src="/src/assets/common/assets/js/lib/jquery.waypoints.min.js"></script>
-    <script src="/src/assets/common/assets/js/lib/jquery.counterup.js"></script>
-    <script src="/src/assets/common/assets/js/lib/parallaxie.js"></script>
-    <script src="/src/assets/common/assets/js/lib/iziToast.min.js"></script>
-    <!-- ===== gsap scripts ===== -->
-    <script src="/src/assets/common/assets/js/gsap_lib/gsap.min.js"></script>
-    <!-- <script src="../common/assets/js/gsap_lib/ScrollSmoother.min.js"></script>
-    <script src="../common/assets/js/gsap_lib/ScrollTrigger.min.js"></script>
-    <script src="../common/assets/js/gsap_lib/SplitText.min.js"></script> -->
-    <script src="/src/assets/common/assets/js/common_js.js"></script>
-
-    <!-- ===== home scripts ===== -->
-    <script src="/src/assets/common/assets/js/home_1_scripts-1.js"></script>
-    <script src="/src/assets/common/assets/js/inner_page.js"></script>
   </body>
 </html>
